whatpulse (2.7-1) unstable; urgency=medium

  * New upstream release

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Tue, 01 Mar 2016 22:10:30 +0100

whatpulse (2.6.3-1) unstable; urgency=medium

  * New upstream release

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Mon, 10 Aug 2015 23:33:36 +0200

whatpulse (2.6.2-1) unstable; urgency=medium

  * New upstream release

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Tue, 07 Jul 2015 00:21:23 +0200

whatpulse (2.6.1-1) unstable; urgency=medium

  * New upstream release

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Sun, 31 May 2015 15:08:40 +0200

whatpulse (2.6-1) unstable; urgency=medium

  * New upstream release

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Fri, 15 May 2015 21:53:27 +0200

whatpulse (2.5-1) unstable; urgency=medium

  * New upstream release
    + Track statistics per mouse button
    + Ignore specific network interfaces for monitoring
    + Local stats are kept through a re-login
    + Fix text color when using black themes.

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Sat, 20 Dec 2014 16:55:16 +0100

whatpulse (2.4.1-1) unstable; urgency=medium

  * New upstream release
    + Show input rates in the geek window
    + Upgrade to Qt5
    + Optionally remove mouse points older than 3 months to save database space
  * Bump Standards-Version to 3.9.6, no changes needed

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Sat, 04 Oct 2014 17:20:15 +0200

whatpulse (2.4-1) unstable; urgency=medium

  * New upstream release
    + Export functionality
    + Option to autopulse every hour
    + Performance and usability improvements
  * Bump Standards-Version to 3.9.5, no changes needed
  * Drop invalid Statistics category from .desktop file

 -- Oxan van Leeuwen <oxan@oxanvanleeuwen.nl>  Fri, 18 Apr 2014 17:37:19 +0200

whatpulse (2.3.1-1) unstable; urgency=medium

  * New upstream release
    + Support colemak keyboard layout
    + Fixed: network graph gaps and spikes