@@ -11,3 +11,4 @@ README.txt
 pcap_permissions.txt
 setup-input-permissions.sh
 whatpulse
+whatpulse-*-intermediate.tar.gz
